@@ -1,6 +1,6 @@
-=============================
-Payment Direct Debit Scenario
-=============================
+=============================================
+Account Payment Direct Debit Balance Scenario
+=============================================
 
 Imports::
 
@@ -10,12 +10,10 @@ Imports::
     >>> from proteus import Model, Wizard
     >>> from trytond.modules.account.tests.tools import (
     ...     create_chart, create_fiscalyear, get_accounts)
-    >>> from trytond.modules.company.tests.tools import create_company, get_company
-    >>> from trytond.tests.tools import activate_modules, assertEqual, assertIsNotNone
+    >>> from trytond.modules.company.tests.tools import create_company
+    >>> from trytond.tests.tools import activate_modules, assertEqual, assertIsNone
 
     >>> today = dt.date.today()
-    >>> tomorrow = today + dt.timedelta(days=1)
-    >>> after_tomorrow = tomorrow + dt.timedelta(days=1)
 
 Activate modules::
 
@@ -30,17 +28,16 @@ Activate modules::
 Create company::
 
     >>> _ = create_company()
-    >>> company = get_company()
 
 Create fiscal year::
 
-    >>> fiscalyear = create_fiscalyear(company, (today, after_tomorrow))
+    >>> fiscalyear = create_fiscalyear()
     >>> fiscalyear.click('create_period')
 
 Create chart of accounts::
 
-    >>> _ = create_chart(company)
-    >>> accounts = get_accounts(company)
+    >>> _ = create_chart()
+    >>> accounts = get_accounts()
 
     >>> revnue_journal, = Journal.find([('code', '=', 'REV')])
 
@@ -52,52 +49,49 @@ Create payment journal::
 
 Create parties::
 
-    >>> customer1 = Party(name="Customer 1")
-    >>> _ = customer1.reception_direct_debits.new(journal=payment_journal)
-    >>> customer1.save()
-    >>> customer2 = Party(name="Customer 2")
-    >>> customer2.save()
+    >>> customer = Party(name="Customer")
+    >>> _ = customer.reception_direct_debits.new(
+    ...     journal=payment_journal, type='balance')
+    >>> customer.save()
 
 Create receivable moves::
 
     >>> move = Move()
     >>> move.journal = revnue_journal
     >>> line = move.lines.new(
-    ...     account=accounts['receivable'], party=customer1,
-    ...     debit=Decimal('100.00'), maturity_date=tomorrow)
+    ...     account=accounts['receivable'], party=customer,
+    ...     debit=Decimal('100.00'), maturity_date=today)
     >>> line = move.lines.new(
     ...     account=accounts['revenue'],
     ...     credit=Decimal('100.00'))
     >>> move.click('post')
 
-    >>> move = Move()
-    >>> move.journal = revnue_journal
-    >>> line = move.lines.new(
-    ...     account=accounts['receivable'], party=customer2,
-    ...     debit=Decimal('200.00'), maturity_date=tomorrow)
-    >>> line = move.lines.new(
-    ...     account=accounts['revenue'],
-    ...     credit=Decimal('200.00'))
-    >>> move.click('post')
-
 Create direct debit::
 
     >>> create_direct_debit = Wizard('account.move.line.create_direct_debit')
-    >>> create_direct_debit.form.date = after_tomorrow
     >>> create_direct_debit.execute('create_')
 
     >>> payment, = Payment.find([])
     >>> payment.amount
     Decimal('100.00')
-    >>> assertEqual(payment.party, customer1)
-    >>> assertEqual(payment.date, tomorrow)
+    >>> assertEqual(payment.party, customer)
     >>> assertEqual(payment.journal, payment_journal)
-    >>> assertIsNotNone(payment.line)
+    >>> assertIsNone(payment.line)
+    >>> payment.amount = Decimal('25.00')
+    >>> payment.save()
+
+Re-run create a second direct debit::
+
+    >>> create_direct_debit = Wizard('account.move.line.create_direct_debit')
+    >>> create_direct_debit.execute('create_')
+
+    >>> payment2, = Payment.find([('id', '!=', payment.id)])
+    >>> payment2.amount
+    Decimal('75.00')
 
 Re-run create direct debit does nothing::
 
     >>> create_direct_debit = Wizard('account.move.line.create_direct_debit')
-    >>> create_direct_debit.form.date = after_tomorrow
     >>> create_direct_debit.execute('create_')
 
-    >>> assertEqual(Payment.find([]), [payment])
+    >>> assertEqual(Payment.find([]), [payment, payment2])
