@@ -2,7 +2,7 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="//field[@name='currency']" position="after">
+    <xpath expr="/form" position="inside">
         <label name="sepa_mandate"/>
         <field name="sepa_mandate"/>
         <newline/>
